# rosrustext

./: .gitignore  Cargo.toml  LICENSE  README.md  SESSION_HISTORY.md  TODO.md  rosrustext.code-workspace
crates/rclrust_core/src/: error.rs
crates/rclrust_core/src/lifecycle/: mod.rs
crates/rclrust_wrapper/: Cargo.toml
crates/rclrust_wrapper/src/: error.rs  lib.rs
crates/rclrust_wrapper/src/lifecycle/: dtos.rs  managed_publisher.rs  mod.rs  node.rs  util.rs
crates/rclrust_wrapper/src/logging/: mod.rs
crates/rclrust_wrapper/src/prelude/: mod.rs
crates/rclrust_wrapper/src/transport/: mod.rs
crates/rclrust_wrapper/src/transport/roslibrust/: lifecycle.rs  mod.rs  publisher.rs
crates/rosrustext_core/: Cargo.toml
crates/rosrustext_core/src/: error.rs  lib.rs
crates/rosrustext_core/src/lifecycle/: engine.rs  gate.rs  graph.rs  mod.rs  state.rs  transition.rs
crates/rosrustext_core/tests/: lifecycle_contracts.rs
crates/rosrustext_ros2_rust/: Cargo.toml
crates/rosrustext_ros2_rust/src/: error.rs  lib.rs
crates/rosrustext_ros2_rust/src/lifecycle/: managed_publisher.rs  managed_timer.rs  mod.rs  node.rs
crates/rosrustext_roslibrust/: Cargo.toml
crates/rosrustext_roslibrust/src/: error.rs  lib.rs
crates/rosrustext_roslibrust/src/lifecycle/: dtos.rs  events.rs  managed_publisher.rs  managed_timer.rs  mod.rs  node.rs  ros.rs  util.rs
crates/rosrustext_roslibrust/src/transport/: mod.rs
crates/rosrustext_roslibrust/src/transport/roslibrust/: lifecycle.rs  mod.rs  publisher.rs  transition_event.rs
crates/rosrustext_roslibrust/tests/: transition_graph_contract.rs
crates/rosrustext_roslibrust/tools/rosrustext_lifecycle_proxy/: Cargo.toml  build.rs
crates/rosrustext_roslibrust/tools/rosrustext_lifecycle_proxy/interfaces/: CMakeLists.txt  package.xml
crates/rosrustext_roslibrust/tools/rosrustext_lifecycle_proxy/interfaces/bond/: package.xml
crates/rosrustext_roslibrust/tools/rosrustext_lifecycle_proxy/interfaces/bond/msg/: Constants.msg
crates/rosrustext_roslibrust/tools/rosrustext_lifecycle_proxy/interfaces/srv/: GetTransitionGraph.srv
crates/rosrustext_roslibrust/tools/rosrustext_lifecycle_proxy/ros_msgs/bond/: package.xml
crates/rosrustext_roslibrust/tools/rosrustext_lifecycle_proxy/src/: bond_agent.rs  config.rs  lib.rs  main.rs  proxy_state.rs  utils.rs
crates/rosrustext_roslibrust/tools/rosrustext_lifecycle_proxy/tests/: proxy_config.rs  proxy_semantics.rs
docs/: lifecycle_parity_roslibrust.md  lifecycle_parity_spec.md
docs/adapters/ros2rust/actions/: README.md
docs/adapters/ros2rust/lifecycle/: parity.md
docs/adapters/ros2rust/overview/: implementation_plan.md  methodology.md
docs/adapters/ros2rust/parameters/: README.md
docs/adapters/roslibrust/actions/: README.md
docs/adapters/roslibrust/lifecycle/: parity.md
docs/adapters/roslibrust/parameters/: README.md
docs/examples/lifecycle/: minimal.md
docs/spec/: lifecycle.md
scripts/: run_all.sh  run_backend.sh  run_lifecycle_test.sh  run_proxy.sh  run_rosbridge.sh  test_lifestyle.sh  test_nav2_bond.sh
scripts/kill/: kill_backend.sh  kill_rosbridge.sh
scripts/run/: run_all.sh  run_backend.sh  run_proxy.sh  run_rosbridge.sh  run_transition_graph_test.sh
scripts/run/roslibrust/lifecycle/: run_all.sh  run_backend.sh  run_lifecycle_test.sh  run_proxy.sh  run_rosbridge.sh  run_transition_graph_test.sh
scripts/test/: run_all_tests.sh  test_lifestyle.sh  test_nav2_bond.sh  test_python_lifecycle_manager.sh  test_transition_graph.sh
scripts/test/roslibrust/actions/: README.md
scripts/test/roslibrust/lifecycle/: test_lifecycle_stress.sh  test_lifestyle.sh  test_nav2_bond.sh  test_python_lifecycle_manager.sh  test_transition_graph.sh
scripts/test/roslibrust/parameters/: README.md
tools/: mk_vscode_workspace.sh
