[package]
name = "rclrust_wrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
rclrust_core = { path = "../rclrust_core" }
roslibrust = { version = "0.18.0", optional = true, features = ["rosbridge"] }
tokio = { version = "1.48", features = ["time"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.48", features = ["macros", "rt", "time"] }

[features]
default = []
roslibrust = ["dep:roslibrust"]
