[package]
name = "rosrustext_roslibrust"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "roslibrust adapter for rosrustext lifecycle semantics"

[dependencies]
rosrustext_core = { path = "../rosrustext_core" }
roslibrust = { version = "0.18.0", optional = true, features = ["rosbridge"] }

tokio = { workspace = true, features = ["time", "sync"] }

tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time", "sync"] }

[features]
default = []
roslibrust = ["dep:roslibrust"]
